Add a jpackage call on the verify phase of anchor subproject